contact-list final

--- a/index.html
+++ b/index.html
@@ -38,10 +38,18 @@
         <label for="name">Name:</label>
         <input type="text" name="name">
       </div>
+      <div>
+        <label for="phone">Phone:</label>
+        <input type="text" name="phone">
+      </div>
+      <div>
+        <label for="emergency-contact">Emergency Contact:</label>
+        <input type="checkbox" name="emergencyContact">
+      </div>
 
       <hr>
       <div class="d-flex space-between">
-        <button type="submit">Submit</button>
+        <button type="submit" onclick="addContact()">Submit</button>
         <!-- TODO hide this form when this button is clicked -->
         <button class="btn-cancel" type="button" onclick="toggleAddContactForm()">cancel</button>
       </div>
@@ -49,26 +57,7 @@
 
     <div class="contacts" id="contact-list">
       <!-- TODO Remove these templates and draw them using JavaScript -->
-      <div class="card mt-1 mb-1">
-        <h3 class="mt-1 mb-1">Jimmy Tester</h3>
-        <div class="d-flex space-between">
-          <p>
-            <i class="fa fa-fw fa-phone"></i>
-            <span>(777) 777-7777</span>
-          </p>
-          <i class="action fa fa-trash text-danger"></i>
-        </div>
-      </div>
-      <div class="card mt-1 mb-1 emergency-contact">
-        <h3 class="mt-1 mb-1">Emergency Contact Tester</h3>
-        <div class="d-flex space-between">
-          <p>
-            <i class="fa fa-fw fa-phone"></i>
-            <span>(777) 777-7777</span>
-          </p>
-          <i class="action fa fa-trash text-danger"></i>
-        </div>
-      </div>
+
     </div>
   </main>
 
